--- a/temps/article.html
+++ b/temps/article.html
@@ -82,4 +82,104 @@
     </footer>
 </body>
 </html>
+{{end}}{{define "article"}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/global.css">
+    <link rel="stylesheet" href="../static/css/article.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav class="navbar">
+            <a href="/" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
+            <div class="nav-links">
+                <a href="/" class="cat-name">
+                    <div class="cat-btn-active">Accueil</div>
+                </a>
+                <a href="/categorie?type=news" class="cat-name">
+                    <div class="cat-btn">Actualités</div>
+                </a> 
+                <a href="/categorie?type=tuto" class="cat-name">
+                    <div class="cat-btn">Tutoriels</div>
+                </a>
+                <a href="/categorie?type=esport" class="cat-name">
+                    <div class="cat-btn">E-sport</div>
+                </a>
+                <a href="/admin" class="cat-name">
+                    <div class="cat-btn">Admin</div>
+                </a>
+            </div>
+            <div class="searchBox">
+                <input class="searchInput"type="text" name="" placeholder="Rechercher">
+                <button class="searchButton" href="#">Go</button>
+            </div>
+        </nav>
+    </header>
+
+    <div class="content">
+        <div class="sidebar-left">
+            votre pub ici les reufs
+        </div>
+
+
+        <div class="main">
+            {{range .}}
+                {{if eq .Id .Id}}
+                <div class="article">
+                    <h1 class="article-title">{{.Name}}</h1>
+                    <img src="{{.Img}}" alt="image de l'article" class="article-img">
+                    <div class="infoart">                    
+                        <div class="date">{{.Date}}</div>
+                        <div class="cat-art">{{.Category}}</div>
+                    </div>
+                    <div class="art-ctn">{{.Content}}</div>
+                    <div class="art-author">{{.Auteur}}</div>
+                </div>
+                {{end}}
+        {{end}}
+        </div> 
+
+        
+        <div class="sidebar-right">
+            votre pub ici les reufs
+        </div> 
+
+
+
+    </div>
+
+
+
+
+    cette page doit contenir l'article en
+détail avec son titre, image, introduction, auteur, date, corps de
+l'article.
+<!-- {{range .}}
+ {{.}}
+{{end}} -->
+
+    <footer>
+        <div class="nav-footer">
+            <div class="top-footer">
+                <div class="logo-footer"><img src="../static/img/logo_PGM.png" alt="logo du footer"></div>
+                <nav class="footer-links">
+                        <a href="/admin">administration</a>
+                        <a href="/ajout">ajouter un article</a>
+                        <a href="/categorie">catégorie</a>
+                        <a href="/mentionslegales">mentions légales</a>
+                        <a href="/recherche">rechercher</a>
+                </nav>
+                <div class="footer-phrase">Inshallah ca passe</div>
+            </div>
+            <div class="bot-footer">
+                Arneau Commeau Deriu Herry Jullemier
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
 {{end}}
