Ajout OK pour de vrai cette fois

--- a/temps/ajout.html
+++ b/temps/ajout.html
@@ -43,6 +43,7 @@
                 <input class="form-txt" type="text" name="title" placeholder="Titre"/>
                 <input class="form-txt" type="text" name="author" placeholder="Auteur"/>
                 <input class="form-txt" type="text" name="category" placeholder="Catégorie de l'article"/>
+                <input class="form-txt" type="text" name="preview" placeholder="Introduction"/>
                 <input class="form-txt-ctn" type="text" name="content" placeholder="Contenu de l'article"/>
                 <input class="form-file" type="file" name="file" />
                 <input class="form-submit" type="submit" value="Upload" />
