commit pour last pull

--- a/temps/mentionslegales.html
+++ b/temps/mentionslegales.html
@@ -9,7 +9,41 @@
     <title>Document</title>
 </head>
 <body>
-    mentions légales du site pour le footer
+    <div class="main"></div>
+    
+    <div class="men">
+    Éditeur du site :
+    Site Créer par Olivier Arneau, Yoan Commeau, Vito Deriu, Arthur Herry, Jeremie Jullemier.
+    </div>
+    <div class="men">
+    Directeur de la publication :
+    Vito "Le Leader Supreme" Deriu 
+    </div>
+    <div class="men">
+    Propriété intellectuelle :
+    Le contenu de ce blog est protégé par le droit d'auteur. Toute reproduction ou utilisation sans autorisation préalable est interdite.
+    </div>
+    <div class="men">
+    Collecte de données personnelles :
+    Ce blog peut collecter des données personnelles dans le cadre de commentaires, d'inscriptions, etc.<br>Ces données seront traitées conformément à la réglementation en vigueur sur la protection des données.
+    </div>
+    <div class="men">
+    Cookies :
+    Ce site n'utilise pas les cookies sauf pour se remplir le ventre.
+    </div>
+    <div class="men">
+    Responsabilité :
+    L'éditeur du blog n'est pas responsable du contenu des sites externes liés.
+    </div>
+    <div class="men">
+    Contact :
+    Allez voir le Leader Supreme pour toute réclamation ou demande particulière.
+    </div>
+    <div class="men">
+    CNIL (Commission Nationale de l'Informatique et des Libertés) :
+    askip on respecte
+    </div>
+</div>
 </body>
 </html>
 {{end}}
