final commit, fix des dernier bug

--- a/temps/article.html
+++ b/temps/article.html
@@ -23,7 +23,7 @@
                     <div class="cat-btn">Tutoriels</div>
                 </a>
                 <a href="/categorie?type=esport" class="cat-name">
-                    <div class="cat-btn">E-sport</div>
+                    <div class="cat-btn">E-Sport</div>
                 </a>
                 <a href="/admin" class="cat-name">
                     <div class="cat-btn">Admin</div>
@@ -71,7 +71,7 @@
                         <a href="/ajout">ajouter un article</a>
                         <a href="/categorie">catégorie</a>
                         <a href="/mentionslegales">mentions légales</a>
-                        <a href="/recherche">rechercher</a>
+
                 </nav>
                 <div class="footer-phrase">Inshallah ca passe</div>
             </div>
