modif mineures ajout de coms et du favicon

--- a/temps/error404.html
+++ b/temps/error404.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/error404.css">
-    <title>Document</title>
+    <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
+    <title>pas PGM du coup</title>
 </head>
 <body>
     <div class="error-ctn">
         <div class="error-404">
           <div class="code">404</div>
-          <div class="error-message">page not found</div>
+          <div class="error-message">frere not found</div>
         </div>
       </div>
 </body>
