--- a/temps/recherche.html
+++ b/temps/recherche.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/global.css">
     <link rel="stylesheet" href="../static/css/recherche.css">
-    <title>Document</title>
+    <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon">
+    <title>PGM</title>
 </head>
 <body>
     <header>
